--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,25 @@
 #
-#               kueue - keep track of your SR queue
-#            (C) 2011 Stefan Bogner <sbogner@novell.com>
+#             kueued - create xml data for kueue's qmon 
+#             (C) 2012 Stefan Bogner <sbogner@suse.com>
 #
-#    This program is free software; you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
-#    the Free Software Foundation; either version 2 of the License, or
-#    (at your option) any later version.
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
 #
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
 #
-#    You should have received a copy of the GNU General Public License
-#    along with this program; if not, write to the
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the
 #
-#    Free Software Foundation, Inc.
-#    59 Temple Place - Suite 330
-#    Boston, MA  02111-1307, USA
+#   Free Software Foundation, Inc.
+#   59 Temple Place - Suite 330
+#   Boston, MA  02111-1307, USA
 #
-#    Have a lot of fun :-)
+#   Have a lot of fun :-)
 
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
 
@@ -39,22 +39,28 @@ ADD_DEFINITIONS( ${QT_DEFINITIONS} )
 SET( QT_USE_QTSQL TRUE )
 SET( QT_USE_QTNETWORK TRUE )
 SET( QT_USE_XML TRUE )
-#
-# Configure defines for the preprocessor
-#
 
-SET( kueued_CPP  main.cpp
+ADD_SUBDIRECTORY( qtservice )
+
+SET( QtService_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/qtservice )
+SET( QT_SERVICE_LIBRARY qtservice )
+
+INCLUDE_DIRECTORIES(${QtService_INCLUDE_DIR} )
+
+SET( kueued_CPP main.cpp
                 kueued.cpp
-		database.cpp )
+		database.cpp
+                settings.cpp)
 
 QT4_AUTOMOC( ${kueued_CPP} )
 
 ADD_EXECUTABLE( kueued ${kueued_CPP} )
 INSTALL( TARGETS kueued DESTINATION bin )
 
-TARGET_LINK_LIBRARIES( kueue ${QT_LIBRARIES} 
-                             ${QT_QTCORE_LIBRARY} 
-                             ${QT_QTSQL_LIBRARIES} 
-                             ${QT_QTNETWORK_LIBRARY} 
-			     ${QT_QTXML_LIBRARY} )
+TARGET_LINK_LIBRARIES( kueued ${QT_LIBRARIES} 
+                              ${QT_QTCORE_LIBRARY} 
+                              ${QT_QTSQL_LIBRARIES} 
+                              ${QT_QTNETWORK_LIBRARY} 
+			      ${QT_QTXML_LIBRARY} 
+                              ${QT_SERVICE_LIBRARY} )
 
