--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ QT4_AUTOMOC( ${kueued_CPP} )
 ADD_EXECUTABLE( kueued ${kueued_CPP} )
 INSTALL( TARGETS kueued DESTINATION bin )
 INSTALL( PROGRAMS scripts/kueued DESTINATION /etc/init.d )
-INSTALL( FILES kueued.conf DESTINATION /etc/kueued )
+#INSTALL( FILES kueued.conf DESTINATION /etc/kueued )
 INSTALL( FILES kueued.log DESTINATION /var/log )
 INSTALL( SCRIPT scripts/kueued_post.cmake )
 
