--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ ADD_EXECUTABLE( kueued ${kueued_CPP} )
 INSTALL( TARGETS kueued DESTINATION bin )
 INSTALL( PROGRAMS scripts/kueued DESTINATION /etc/init.d )
 #INSTALL( FILES kueued.conf DESTINATION /etc/kueued )
-INSTALL( FILES kueued.log DESTINATION /var/log )
+#INSTALL( FILES kueued.log DESTINATION /var/log )
 INSTALL( SCRIPT scripts/kueued_post.cmake )
 
 TARGET_LINK_LIBRARIES( kueued ${QT_LIBRARIES} 
