--- a/kueued.conf
+++ b/kueued.conf
@@ -1,4 +1,13 @@
 [General]
 DBServer=
-refreshSeconds=30
-
+refreshSeconds=
+timezoneCorrection=
+oracleHost=
+oraclePort=
+oracleUser=
+oraclePassword=
+oracleDatabase=
+mysqlHost=
+mysqlUser=
+mysqlPassword=
+mysqlDatabase=
