--- a/kueued.conf
+++ b/kueued.conf
@@ -12,3 +12,10 @@ mysqlUser=
 mysqlPassword=
 mysqlDatabase=
 latestVersion=
+qmonDbDatabase=
+qmonDbUser=
+qmonDbPassword=
+siebelDatabase=
+siebelUser=
+siebelPassword=
+siebelHost=
