too many changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,13 +52,19 @@ SET( QT_SERVICE_LIBRARY qtservice )
 
 INCLUDE_DIRECTORIES(${QtService_INCLUDE_DIR} ${QtSingleApp_INCLUDE_DIR} )
 
+ADD_SUBDIRECTORY( threadweaver )
+
+SET( ThreadWeaver_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/threadweaver )
+SET( THREADWEAVER_LIBRARY threadweaver )
+
+INCLUDE_DIRECTORIES( ${ThreadWeaver_INCLUDE_DIR} )
+
 ADD_SUBDIRECTORY( srv )
 SET( kueued-srv_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/srv )
 INCLUDE_DIRECTORIES( ${kueued-srv_INCLUDE_DIR} )
 
-ADD_SUBDIRECTORY( db )
-SET( kueued-db_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/db )
-INCLUDE_DIRECTORIES( ${kueued-db_INCLUDE_DIR} )
+ADD_SUBDIRECTORY( dbupdate )
+SET( kueued-dbupdate_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dbupdate )
+INCLUDE_DIRECTORIES( ${kueued-dbupdate_INCLUDE_DIR} )
 
 INSTALL( SCRIPT scripts/kueued_post.cmake )
-
